--- a/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
@@ -27,8 +27,14 @@
                                 <div class="col-3 text-muted">Installments</div>
                                 <div class="col-3">{{item?.paymentTypeId != 4 ? item?.paymentType?.paymentType : 'N/A'}}
                                 </div>
-                                <div class="col-2">{{item?.finalPrice | number}}</div>
-                                <div class="col-2">{{item?.quantity}}</div>
+                                <div class="col-2">{{item?.price | number}}</div>
+                                <div class="col-2" *ngIf="item?.paymentTypeId != 4;else elseBlock">{{item?.quantity}}
+                                </div>
+                                <ng-template #elseBlock>
+                                    <div class="col-2">
+                                        <input type="text" value="{{item?.quantity}}" class="form-control h-75 w-75">
+                                    </div>
+                                </ng-template>
                                 <div class="col-2">{{item?.finalPrice | number}}</div>
                             </div>
                             <div class="row py-1">
