changes in cart

--- a/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
@@ -22,4 +22,11 @@
         border-radius: 9px;
         min-width: 85px;
     }
+    .updateQty {
+        border-radius: 4px !important;
+        padding: 0.3rem !important;
+        font-size: 12px;
+        line-height: inherit;
+        min-width: auto;
+    }
 }
