--- a/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
@@ -1,13 +1,13 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
-    <kt-portlet-body>
+    <kt-portlet-body *ngIf="cartData">
         <div class="row" *ngIf="cartData;else noCartItems">
             <div class="col-8 cart-height overflow-auto">
                 <div class="cart-list-item" *ngFor="let item of cartData?.allCartData">
                     <div class="row">
                         <div class="col-2 d-flex align-items-center justify-content-center">
                             <img [src]="item?.product.productImage != '0' ? item?.product?.productImage: 'assets/media/icons/image-placeholder.png'"
-                                alt="test">
+                                alt="test" class="productImage">
                         </div>
                         <div class="col-10">
                             <div class="row">
@@ -32,7 +32,8 @@
                                 </div>
                                 <ng-template #elseBlock>
                                     <div class="col-2">
-                                        <input type="text" value="{{item?.quantity}}" class="form-control h-75 w-75">
+                                        <input type="text" value="{{item?.quantity}}"
+                                            class="form-control h-75 w-75 productQtyInput">
                                     </div>
                                 </ng-template>
                                 <div class="col-2">{{item?.finalPrice | number}}</div>
@@ -41,6 +42,10 @@
                                 <div class="col-3 text-muted">Initial Payment</div>
                                 <div class="col-3">
                                     {{item?.paymentTypeId != 4 ? (item?.initialPayment | number) : 'N/A'}}</div>
+                                <div class="col-2 offset-2" *ngIf="item?.paymentTypeId == 4">
+                                    <kt-button [myClass]="'updateQty'" [value]="'Update'" [type]="'button'"
+                                        (click)="updateQuantity(item)"></kt-button>
+                                </div>
                             </div>
                             <div class="row py-1" *ngIf="item?.paymentTypeId != 4">
                                 <div class="col-3 text-muted">EMI Amount</div>
@@ -89,7 +94,8 @@
                         </div>
                     </div>
                     <div class="text-center pt-3">
-                        <kt-button [value]="'Proceed to Checkout'" [type]="'button'"></kt-button>
+                        <kt-button [value]="'Proceed to Checkout'" [type]="'button'" (click)="checkoutCart()">
+                        </kt-button>
                     </div>
                 </div>
             </div>
