--- a/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.scss
@@ -13,4 +13,13 @@
         border-radius: 10px;
         font-weight: 500;
     }
+    .productImage {
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .productQtyInput {
+        border-radius: 4px !important;
+        padding: 0.3rem !important;
+        text-align: center;
+    }
 }
