--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -141,7 +141,7 @@ input[type="number"] {
 }
 
 .kt-pointer {
-	cursor: pointer;
+	cursor: pointer !important;
 }
 
 .mat-button-toggle-label-content {
