--- a/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,7 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
     <kt-portlet-body *ngIf="cartData">
-        <div class="row" *ngIf="cartData;else noCartItems">
+        <div class="row" *ngIf="cartData?.allCartData?.length;else noCartItems">
             <div class="col-8 cart-height overflow-auto">
                 <div class="cart-list-item" *ngFor="let item of cartData?.allCartData">
                     <div class="row">
@@ -16,7 +16,7 @@
                                 </div>
                             </div>
                             <hr>
-                            <div class="row py-1">
+                            <!-- <div class="row py-1">
                                 <div class="col-3 text-muted">SKU Code</div>
                                 <div class="col-3">{{item?.product?.sku}}</div>
                                 <div class="col-2 text-muted">Price</div>
@@ -50,6 +50,44 @@
                             <div class="row py-1" *ngIf="item?.paymentTypeId != 4">
                                 <div class="col-3 text-muted">EMI Amount</div>
                                 <div class="col-3">{{item?.emiAmount | number}}</div>
+                            </div> -->
+
+                            <div class="row">
+                                <div class="col">
+                                    <div class="text-muted py-1">SKU Code:</div>
+                                    <div class="text-muted py-1">Installments:</div>
+                                    <div class="text-muted py-1">Initial Payment:</div>
+                                    <div class="text-muted py-1" *ngIf="item?.paymentTypeId != 4">EMI Amount:</div>
+                                </div>
+                                <div class="col">
+                                    <div class="py-1">{{item?.product?.sku}}</div>
+                                    <div class="py-1">
+                                        {{item?.paymentTypeId != 4 ? item?.paymentType?.paymentType : 'N/A'}}</div>
+                                    <div class="py-1">
+                                        {{item?.paymentTypeId != 4 ? (item?.initialPayment | number) : 'N/A'}}</div>
+                                    <div class="py-1" *ngIf="item?.paymentTypeId != 4">{{item?.emiAmount | number}}
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="text-muted py-1">Price</div>
+                                    <div class="py-1">{{item?.price | number}}</div>
+                                </div>
+                                <div class="col" *ngIf="item?.paymentTypeId == 4">
+                                    <div class="text-muted py-1">Quantity</div>
+                                    <div class="py-1" *ngIf="item?.paymentTypeId != 4;else elseBlock1">
+                                        {{item?.quantity}}
+                                    </div>
+                                    <ng-template #elseBlock1>
+                                        <div>
+                                            <input type="text" value="{{item?.quantity}}"
+                                                class="form-control h-75 w-75 productQtyInput">
+                                        </div>
+                                    </ng-template>
+                                </div>
+                                <div class="col">
+                                    <div class="text-muted py-1">SubTotal</div>
+                                    <div class="py-1">{{item?.finalPrice | number}}</div>
+                                </div>
                             </div>
                         </div>
                     </div>
