--- a/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/button/button.component.scss
@@ -23,10 +23,9 @@
         min-width: 85px;
     }
     .updateQty {
-        border-radius: 4px !important;
-        padding: 0.3rem !important;
+        padding: 0.5rem !important;
         font-size: 12px;
         line-height: inherit;
-        min-width: auto;
+        min-width: 70px;
     }
 }
