--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="row kt-margin-t-15" *ngIf="hiddenFlag">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">EMI Status</label>
+                            <label class="font-weight-500 text-color">Order Status</label>
                         </div>
                         <div class="col-8">
                             <select class="form-control" formControlName="statusId"
