--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -14,7 +14,7 @@
             <mat-tab label="By Filling From">
                 <form [formGroup]="fillingForm">
                     <div class="row kt-margin-b-15">
-                        <div class="col-3 form-label" >
+                        <div class="col-3 form-label">
                             <label class="kt-padding-l-10 mandatory">Partner Name</label>
                         </div>
                         <div class="col-9">
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="row kt-margin-b-15">
-                        <div class="col-3 form-label" >
+                        <div class="col-3 form-label">
                             <label class="kt-padding-l-10 mandatory"> Scheme Name</label>
                         </div>
                         <div class="col-9">
@@ -39,8 +39,83 @@
                         </div>
                     </div>
 
+                    <div class="row kt-margin-b-15">
+                        <div class="col-3 form-label">
+                            <label class="kt-padding-l-10 mandatory">Scheme Type</label>
+                        </div>
+                        <div class="col-9">
+                            <select name="" id="" class="form-control" formControlName="schemeType"
+                                [class.isError]="fillingForm.get('schemeType').touched && fillingForm.get('schemeType').invalid">
+                                <option value="" [selected]="true" [disabled]="true">Select Scheme Type</option>
+                                <option [value]="scheme.value" *ngFor="let scheme of schemeType">
+                                    {{scheme.name | titlecase}}
+                                </option>
+                            </select>
+
+                        </div>
+                    </div>
+
                     <div class="row kt-margin-b-10">
-                        <div class="col-3 form-label" >
+                        <div class="col-3 form-label">
+                            <label class="kt-padding-l-10 mandatory"> Processing Charges</label>
+                        </div>
+                        <div class="col-9">
+                            <div class="row">
+                                <div class="col">
+                                    <input type="number" class="form-control" formControlName="processingChargeFixed"
+                                        [class.isError]="fillingForm.get('processingChargeFixed').touched && fillingForm.get('processingChargeFixed').invalid"
+                                        placeholder="Fixed">
+                                    <mat-error
+                                        *ngIf="fillingForm.get('processingChargeFixed').errors?.pattern && fillingForm.get('processingChargeFixed').touched">
+                                        Invalid Input
+                                    </mat-error>
+                                </div>
+                                <div class="col-1 form-label justify-content-center"><label> Or</label></div>
+                                <div class="col">
+                                    <input type="number" class="form-control" formControlName="processingChargePercent"
+                                        [class.isError]="fillingForm.get('processingChargePercent').touched && fillingForm.get('processingChargePercent').invalid"
+                                        placeholder="% of loan amount">
+                                    <mat-error
+                                        *ngIf="fillingForm.get('processingChargePercent').errors?.pattern && fillingForm.get('processingChargePercent').touched">
+                                        Invalid Input
+                                    </mat-error>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row kt-margin-b-15">
+                        <div class="col-3 form-label">
+                            <label class="kt-padding-l-10 mandatory"> Maximum % Allowed </label>
+                        </div>
+                        <div class="col-9">
+                            <input type="test" class="form-control" formControlName="maxPercentAllowed"
+                                [class.isError]="fillingForm.get('maxPercentAllowed').touched && fillingForm.get('maxPercentAllowed').invalid"
+                                placeholder="Maximum % Allowed">
+                            <mat-error
+                                *ngIf="fillingForm.get('processingChargePercent').errors?.pattern && fillingForm.get('processingChargePercent').touched">
+                                Invalid Input
+                            </mat-error>
+                        </div>
+                    </div>
+
+                    <div class="row kt-margin-b-15">
+                        <div class="col-3 form-label">
+                            <label class="kt-padding-l-10 mandatory"> Penal Interest </label>
+                        </div>
+                        <div class="col-9">
+                            <input type="test" class="form-control" formControlName="penalInterest"
+                                [class.isError]="fillingForm.get('penalInterest').touched && fillingForm.get('penalInterest').invalid"
+                                placeholder="00%">
+                            <mat-error
+                                *ngIf="fillingForm.get('processingChargePercent').errors?.pattern && fillingForm.get('processingChargePercent').touched">
+                                Invalid Input
+                            </mat-error>
+                        </div>
+                    </div>
+
+                    <div class="row kt-margin-b-10">
+                        <div class="col-3 form-label">
                             <label class="kt-padding-l-10 mandatory"> Enter Amount</label>
                         </div>
                         <div class="col-9">
@@ -131,7 +206,7 @@
             <mat-tab label="By Uploading CSV">
                 <form [formGroup]="csvForm">
                     <div class="row kt-margin-t-20">
-                        <div class="col-3  form-label" >
+                        <div class="col-3  form-label">
                             <label class="kt-padding-l-10 mandatory">Partner Name</label>
                         </div>
                         <div class="col-9">
@@ -146,7 +221,7 @@
                         </div>
                     </div>
                     <div class="row kt-margin-t-20">
-                        <div class="col-3 form-label" >
+                        <div class="col-3 form-label">
                             <label class="kt-padding-l-10 mandatory">Upload CSV</label>
                         </div>
                         <div class="col-9">
