--- a/gold-admin-frontend/src/app/views/pages/admin/masters/reasons/reason-list/reason-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/reasons/reason-list/reason-list.component.html
@@ -11,7 +11,7 @@
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <div [ngStyle]="{'display': 'inherit'}">
+                        <div [ngStyle]="{'display': 'inherit'}" *ngIf="item.description !== 'Other'">
                             <span class="kt-pointer" (click)="editReason(item)">Edit</span>
                             <div class="px-2">|</div>
                             <span class="kt-pointer text-danger" (click)="deleteReason(item)">Delete</span>
