--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
@@ -1,6 +1,6 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
-    <kt-portlet-body>
+    <kt-portlet-body class="checkout-height">
         <div class="row py-4">
             <div class="col-12">
                 <kt-button [value]="'Existing Customer'" [type]="'button'" (click)="checkCustomerType('exist')">
@@ -25,142 +25,195 @@
                     <kt-button [value]="'Done'" [type]="'submit'" (click)="getExistingCustomer()"></kt-button>
                 </div>
             </div>
-            <div class="row py-3">
-                <div class="col-6 pr-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Customer Name</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="firstName" class="form-control">
-                        </div>
-                    </div>
+            <div *ngIf="existingCustomerData" class="font-weight-500">
+                <div class="row py-2">
+                    <div class="col-2 align-self-center text-muted">Customer Name</div>
+                    <div class="col-8">{{existingCustomerData?.customerDetails?.firstName}}
+                        {{existingCustomerData?.customerDetails?.lastName}}</div>
                 </div>
-                <div class="col-6 pl-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Mobile Number</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="mobileNumber" class="form-control" numbersOnly>
-                        </div>
-                    </div>
+                <div class="row py-2">
+                    <div class="col-2 align-self-center text-muted">Email ID</div>
+                    <div class="col-8">{{existingCustomerData?.customerDetails?.email}}</div>
                 </div>
-            </div>
-            <div class="row py-3">
-                <div class="col-6 pr-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Email ID</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="email" class="form-control">
-                        </div>
-                    </div>
+                <div class="row py-2">
+                    <div class="col-2 align-self-center text-muted">Address</div>
+                    <div class="col-8">{{existingCustomerData?.customerDetails?.customeraddress[0]?.address}}</div>
                 </div>
-                <div class="col-6 pl-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Landmark</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="landMark" class="form-control">
-                        </div>
-                    </div>
+                <div class="row py-2">
+                    <div class="col-2 align-self-center text-muted">Landmark</div>
+                    <div class="col-8">{{existingCustomerData?.customerDetails?.customeraddress[0]?.landMark}}</div>
+                </div>
+                <div class="row py-2">
+                    <div class="col-2 align-self-center text-muted">State</div>
+                    <div class="col-8">{{existingCustomerData?.customerDetails?.customeraddress[0]?.state?.name}}</div>
+                </div>
+                <div class="row py-2">
+                    <div class="col-2 align-self-center text-muted">City</div>
+                    <div class="col-8">{{existingCustomerData?.customerDetails?.customeraddress[0]?.city?.name}}</div>
+                </div>
+                <div class="row py-2">
+                    <div class="col-2 align-self-center text-muted">Pincode</div>
+                    <div class="col-8">{{existingCustomerData?.customerDetails?.pinCode}}</div>
                 </div>
             </div>
-            <div class="row py-3">
-                <div class="col-6 pr-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Address</label>
+            <div *ngIf="showformFlag">
+                <div class="row py-3">
+                    <div class="col-6 pr-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">Customer Name</label>
+                            </div>
+                            <div class="col-8">
+                                <input type="text" formControlName="firstName" class="form-control">
+                            </div>
                         </div>
-                        <div class="col-8">
-                            <textarea type="text" formControlName="address" rows="3" class="form-control"></textarea>
+                    </div>
+                    <div class="col-6 pl-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">Mobile Number</label>
+                            </div>
+                            <div class="col-8">
+                                <input type="text" formControlName="mobileNumber" class="form-control" numbersOnly>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 pl-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">State</label>
+                <div class="row py-3">
+                    <div class="col-6 pr-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">Email ID</label>
+                            </div>
+                            <div class="col-8">
+                                <input type="text" formControlName="email" class="form-control">
+                            </div>
                         </div>
-                        <div class="col-8">
-                            <select class="form-control" formControlName="stateName"
-                                [class.isError]="controls.stateName.touched && controls.stateName.invalid"
-                                (change)="getCities()">
-                                <option value="" [selected]="true" [disabled]="true">Select State</option>
-                                <option [value]="state.id" *ngFor="let state of stateList">{{state.name}}
-                                </option>
-                            </select>
-                            <div *ngIf="controls.stateName.touched && controls.stateName.invalid">
-                                <mat-error *ngIf="controls.stateName.touched && controls.stateName.errors?.required">
-                                    Field is required</mat-error>
+                    </div>
+                    <div class="col-6 pl-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">Landmark</label>
+                            </div>
+                            <div class="col-8">
+                                <input type="text" formControlName="landMark" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row py-3">
+                    <div class="col-6 pr-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">Address</label>
+                            </div>
+                            <div class="col-8">
+                                <textarea type="text" formControlName="address" rows="3"
+                                    class="form-control"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 pl-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">State</label>
+                            </div>
+                            <div class="col-8">
+                                <select class="form-control" formControlName="stateName"
+                                    [class.isError]="controls.stateName.touched && controls.stateName.invalid"
+                                    (change)="getCities()">
+                                    <option value="" [selected]="true" [disabled]="true">Select State</option>
+                                    <option [ngValue]="state" *ngFor="let state of stateList">{{state.name}}
+                                    </option>
+                                </select>
+                                <div *ngIf="controls.stateName.touched && controls.stateName.invalid">
+                                    <mat-error
+                                        *ngIf="controls.stateName.touched && controls.stateName.errors?.required">
+                                        Field is required</mat-error>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row py-3">
+                    <div class="col-6 pr-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">City</label>
+                            </div>
+                            <div class="col-8">
+                                <select class="form-control" formControlName="cityName"
+                                    [class.isError]="controls.cityName.touched && controls.cityName.invalid">
+                                    <option value="" [selected]="true" [disabled]="true">Select City</option>
+                                    <option [ngValue]="city" *ngFor="let city of cityList">{{city.name}}</option>
+                                </select>
+                                <div *ngIf="controls.cityName.touched && controls.cityName.invalid">
+                                    <mat-error *ngIf="controls.cityName.touched && controls.cityName.errors?.required">
+                                        Field
+                                        is required</mat-error>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 pl-4">
+                        <div class="row">
+                            <div class="col-4 align-self-center">
+                                <label class="font-weight-500 text-color">Pincode</label>
+                            </div>
+                            <div class="col-8">
+                                <input type="text" formControlName="postalCode" class="form-control">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row py-3">
-                <div class="col-6 pr-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">City</label>
-                        </div>
-                        <div class="col-8">
-                            <select class="form-control" formControlName="cityName"
-                                [class.isError]="controls.cityName.touched && controls.cityName.invalid">
-                                <option value="" [selected]="true" [disabled]="true">Select City</option>
-                                <option [value]="city.id" *ngFor="let city of cityList">{{city.name}}</option>
-                            </select>
-                            <div *ngIf="controls.cityName.touched && controls.cityName.invalid">
-                                <mat-error *ngIf="controls.cityName.touched && controls.cityName.errors?.required">Field
-                                    is required</mat-error>
+            <div *ngIf="showPlaceOrder">
+                <hr>
+                <div class="row py-3">
+                    <div class="col-6 pr-4">
+                        <div class="row">
+                            <div class="col-8 font-weight-500">
+                                <div class="row">
+                                    <div class="col-6 text-muted pb-2">Invoice Price:</div>
+                                    <div class="col-6">₹{{checkoutData?.invoiceAmount | number}}</div>
+                                    <div class="col-6 text-muted pb-2">Now Payable Amount:</div>
+                                    <div class="col-6">₹{{checkoutData?.nowPayableAmount | number}}</div>
+                                    <ng-container
+                                        *ngIf="checkoutData?.emiScheme?.length ||checkoutData?.emiAmount?.length">
+                                        <div class="col-6 text-muted pb-2">Initial Payment:</div>
+                                        <div class="col-6">₹{{checkoutData?.initialPayment | number}}</div>
+                                        <div class="col-6 text-muted pb-2">EMI Scheme:</div>
+                                        <div class="col-6" *ngIf="checkoutData?.emiScheme?.length">
+                                            <span class="content"
+                                                *ngFor="let scheme of checkoutData?.emiScheme; let isLast=last">
+                                                {{scheme}}{{isLast ? '' : ', '}}
+                                            </span>
+                                            <span>Months</span>
+                                        </div>
+                                        <div class="col-6 text-muted">EMI Amount:</div>
+                                        <div class="col-6" *ngIf="checkoutData?.emiAmount?.length">
+                                            <span class="content"
+                                                *ngFor="let amt of checkoutData?.emiAmount; let isLast=last">
+                                                {{amt | number}}{{isLast ? '' : ', '}}
+                                            </span>
+                                        </div>
+                                        <div class="col-6 offset-6">(Per Month)</div>
+                                    </ng-container>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <kt-button [value]="'Generate OTP'" [type]="'normalButton'" (click)="generateOTP()"></kt-button>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-6 pl-4">
-                    <div class="row">
-                        <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Pincode</label>
-                        </div>
-                        <div class="col-8">
-                            <input type="text" formControlName="postalCode" class="form-control">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div class="row py-3">
-                <div class="col-6 pr-4">
-                    <div class="row">
-                        <div class="col-8 font-weight-500">
-                            <div class="row">
-                                <div class="col-6 text-muted pb-2">Invoice Price:</div>
-                                <div class="col-6">₹6,902.00</div>
-                                <div class="col-6 text-muted pb-2">Now Payable Amount:</div>
-                                <div class="col-6">₹1,380.40</div>
-                                <div class="col-6 text-muted pb-2">Initial Payment:</div>
-                                <div class="col-6">₹1,380.40</div>
-                                <div class="col-6 text-muted pb-2">EMI Scheme:</div>
-                                <div class="col-6">3,3 Months</div>
-                                <div class="col-6 text-muted pb-2">EMI Amount:</div>
-                                <div class="col-6">920.27,920.27 (per Month)</div>
+                    <div class="col-6 pl-4">
+                        <div class="row">
+                            <div class="col-6">
+                                <input type="text" formControlName="postalCode" class="form-control">
                             </div>
-                        </div>
-                        <div class="col-4">
-                            <kt-button [value]="'Generate OTP'" [type]="'normalButton'"></kt-button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 pl-4">
-                    <div class="row">
-                        <div class="col-6">
-                            <input type="text" formControlName="postalCode" class="form-control">
-                        </div>
-                        <div class="col-6">
-                            <kt-button [value]="'Place Order'" [type]="'submit'"></kt-button>
+                            <div class="col-6">
+                                <kt-button [value]="'Place Order'" [type]="'submit'"></kt-button>
+                            </div>
                         </div>
                     </div>
                 </div>
