final interest  calculator

--- a/gold-admin-frontend/src/app/app.component.html
+++ b/gold-admin-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <kt-splash-screen *ngIf="loader"></kt-splash-screen>
 
 <ng-http-loader [backdrop]="true" [backgroundColor]="'#454d67'" [debounceDelay]="100" [extraDuration]="300"
-    [minDuration]="300" [opacity]="0.4" [spinner]="spinkit.skCubeGrid">></ng-http-loader>
+    [minDuration]="300" [opacity]="0.4" [spinner]="spinkit.skCubeGrid"></ng-http-loader>
 <router-outlet></router-outlet>
