--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -73,7 +73,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4 offset-2 form-label">
-                            <label class="text-color kt-padding-l-10">Loan Purpose</label>
+                            <label class="text-color kt-padding-l-10 mandatory">Loan Purpose</label>
                         </div>
                         <div class="col-6">
                             <select formControlName="purpose" class="form-control" 
